# email-reader

./: .gitignore  Dockerfile  Makefile  run-docker
.github/workflows/: ci.yml
ansible/: build-environment.yml  generate-docker-compose.yml
ansible/group_vars/: all.yml
ansible/group_vars/ci/: settings.yml
ansible/group_vars/local/: secrets.yml  settings.yml
ansible/inventory/: build  ci  local
ansible/templates/: build.environment  docker-compose.yml.j2
backend/: pyproject.toml  wsgi_bjoern.py
backend/config/: __init__.py  api_urls.py  settings.py  urls.py
backend/locale/en/LC_MESSAGES/: django.po
backend/locale/pl/LC_MESSAGES/: django.po
backend/modules/core/: models.py
backend/modules/email_reader/: admin.py  apps.py  dto.py  exceptions.py  interface.py  models.py  tasks.py  utils.py
backend/modules/email_reader/migrations/: 0001_initial.py  0002_emailaddress_alter_email_receiver_alter_email_sender.py
backend/modules/email_reader/tests/: factories.py  mocks.py  utils.py
backend/modules/email_reader/tests/tests_dtos/: test_email_attachment_dto.py  test_email_dto.py  test_validation_email_attachment_dto.py  test_validation_email_dto.py
backend/modules/email_reader/tests/tests_interface/: test_extract_email.py  test_fetch_ids.py  test_instantiation.py  test_login_and_logout.py  test_process_email_extraction.py
backend/modules/email_reader/tests/tests_models/: test_email.py  test_email_attachment.py
backend/modules/email_reader/tests/tests_utils/: test_extract_email_address.py
backend/modules/healthchecks/: apps.py  urls.py  views.py
backend/modules/healthchecks/migrations/: __init__.py
backend/modules/healthchecks/tests/: __init__.py  test_healthcheck.py
backend/modules/users/: admin.py  models.py
backend/modules/users/migrations/: 0001_initial.py
backend/modules/users/tests/: factories.py
backend/modules/users/tests/test_models/: test_user_model.py
backend/scheduler/: __init__.py  celery.py  tasks.py
backend/utils/: __init__.py  environment.py  misc.py
docker/: docker-entrypoint
docker/config/: nginx.conf
docker/config/nginx/: backend.conf
docker/scripts/: generate-docker-compose  install-docker  makemessages  run-black  run-fix-imports  run-ruff  run-test  run-verify  verify-imports  verify-migration-clashes  verify-missing-migrations  verify-ruff-formatter  verify-ruff-linter  verify-translations  wait-for-postgres
